# nautobot-labs

./: .gitignore  bake.py  lab  lab copy  pyproject.toml  tasks.py
automation/: automation.env  components  docker-compose.automation.yml
automation/conf.d/: 20_create_projects.sh  30_create_inventories.sh
automation/fixtures/: 20_devices.yaml  30_datasources.yaml
automation/projects/Automation/: inventory.yml
awx/: __init__.py  docker-compose.awx.yml
config_contexts/: __init__.py  components  docker-compose.config_contexts.yml  startup.sh
config_contexts/fixtures/: 30_datasources.yaml
cookie-cutter/{{cookiecutter.lab_name}}/: README.md  tasks.py
cookie-cutter/{{cookiecutter.lab_name}}/config/: labpath  nautobot_config.py
cookie-cutter/{{cookiecutter.lab_name}}/docker/: docker-compose.lab.yml
docker/: docker-compose.awx.yml  docker-compose.git_server.yml  docker-compose.ldap.yml  docker-compose.nautobot_base.yml  docker-compose.postgres.yml  docker-compose.redis.yml
docker/git_server/: Dockerfile  entrypoint.sh
git_repository/: README.md  tasks.py
git_repository/config/: creds.example.env
git_repository/docker/: docker-compose.lab.yml  docker-compose.postgres.yml
git_repository/fixtures/: 10_organization.yaml  20_devices.yaml
lab_builder/: __init__.py  __main__.py  config.py  decorators.py  lab.py  node.py  runner.py  util.py
lab_builder/labs/: __init__.py  common.py
lab_builder/labs/config_contexts/: labs.py  services.py
labs/ldap/: labs.py  nautobot_config.py.j2  services.py
labs/nautobot/: basic.py  nautobot.py  nautobot_config.py.j2  services.py
ldap/config/: creds.example.env  nautobot_config.py
ldap/fixtures/: 10_organization.yaml  30_devices.yaml
ldap/ldifs/: 20groups.ldif
ldap_auth/: components  docker-compose.ldap_auth.yml  nautobot_config.py  tasks.py
ldap_auth/config/: nautobot_config.py
ldap_auth/docker/: docker-compose.base.yml  docker-compose.lab.yml  docker-compose.redis.yml
ldap_auth/fixtures/: 20_permissions.yaml  30_devices.yaml
nautobot/: __init__.py  bootstrap.sh  components  docker-compose.nautobot.yml  labpath.sh  nautobot-celery-entrypoint.sh  nautobot-entrypoint.sh  nautobot.env  nautobot_config.py  startup.sh
old_labs/automation/: __init__.py  components
old_labs/config_contexts/: docker-compose.config_contexts.yml
old_labs/docker/: docker-compose.awx.yml
old_labs/git_server/: __init__.py  docker-compose.git_server.yml
old_labs/ldap/: __init__.py  ldap.env
old_labs/ldap_auth/: README.md  __init__.py
old_labs/nautobot/: nautobot.env
tests/: test_definition.py  test_util.py
(+35 files in other folders)
