[tool.poetry]
name = "lab-builder"
version = "0.1.0"
description = ""
authors = ["Andrew Bates <abates@omeganetserv.com>"]
readme = "README.md"
packages = [{include = "lab_builder"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = {extras = ["all"], version = "^0.9.0"}
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
