[tool.poetry]
name = "lab-builder"
version = "0.1.0"
description = ""
authors = ["Andrew Bates <abates@omeganetserv.com>"]
readme = "README.md"
packages = [{include = "lab_builder"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = {extras = ["all"], version = "^0.9.0"}
jinja2 = "^3.1.3"
platformdirs = "^4.1.0"
cmd2 = "^2.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"

line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle
    "D2",  # pydocstyle
    "D3",  # pydocstyle
    "D4",  # pydocstyle
]
ignore = [
    "D106",  # Missing docstring in public nested class

    # warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    "D203",  # 1 blank line required before class docstring

    # D212 is enabled by default in google convention, and complains if we have a docstring like:
    # """
    # My docstring is on the line after the opening quotes instead of on the same line as them.
    # """
    # We've discussed and concluded that we consider this to be a valid style choice.
    "D212",  # Multi-line docstring summary should start at the first line
    "D213",  # Multi-line docstring summary should start at the second line

    "D417",  # Missing argument descriptions in the docstring

    "E501", # Line too long

]

pydocstyle.convention = "google"
